--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
       module = undefined;
     }
   </script>
-  <link rel="stylesheet" type="text/css" href="libs/semantic/semantic.min.css">
+  <!-- <link rel="stylesheet" type="text/css" href="libs/semantic/semantic.min.css"> -->
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-  <script src="libs/semantic/semantic.min.js"></script>
+  <!-- <script src="libs/semantic/semantic.min.js"></script> -->
   <script>
     if (window.module) module = window.module;
   </script>
