redid the download manager and working on a tile view of the comics.

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
           </div>
         </div>
         <div class="chrome-tabs-bottom-bar"></div>
+        <div class="chrome-tabs-bottom-bar progress waiting"><dt></dt>
+    <dd></dd></div>
         <div id="title-bar-btns">
            <button id="min-btn">-</button>
            <button id="max-btn">+</button>
@@ -58,6 +60,13 @@
           <button data-remove-tab>Remove active tab</button>
 
           <button data-add-comic>Add Comic</button>
+        </div>
+
+        <div class="comics">
+          <div class="comic">
+            <img src="file:///C:/Users/Triktron/AppData/Roaming/e621-comic-reader/comics/14921/1600458.png" alt="">
+            <div class="title"></div>
+          </div>
         </div>
       </div>
     </div>
