used a linter to make everything uniform.

--- a/src/pages/comic.html
+++ b/src/pages/comic.html
@@ -46,6 +46,8 @@
 
                 <div class="pswp__counter"></div>
 
+                <button class="pswp__button pswp__button--update" title="Update"></button>
+
                 <button class="pswp__button pswp__button--share" title="Share"></button>
 
                 <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
